# hit-component-admin-dashboard

./: Dockerfile  README.md  hit.yaml  pyproject.toml
app/: __init__.py  main.py  ui_specs.py
tests/: __init__.py  test_api.py  test_health.py  test_ui_specs.py
